# Online-Store-2.0

./: README.md  blog_fixture.json  category_fixture.json  product_fixture.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_test_data.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category.py
catalog/templates/: contacts.html  contacts_content.html  home.html  products_detail.html  products_list.html
catalog/templates/catalog/: contacts.html  contacts_content.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
