[tool.poetry]
name = "online-store 2-0"
version = "0.1.0"
description = ""
authors = ["holdlemon <d.vajov2010@yandex.ru>"]
readme = "README.md"
packages = [{include = "online_store 2"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
