[tool.poetry]
name = "online-store 2-0"
version = "0.1.0"
description = ""
authors = ["holdlemon <d.vajov2010@yandex.ru>"]
readme = "README.md"
packages = [{include = "online_store 2"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"
ipython = "^8.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
